se añadio el CU20, CU21, CU22, CU23, CU24, CU25
