# app/Models/Reservation.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Reservation extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'room_id',
+        'schedule_id',
+        'teacher_id',
+        'reserved_at',
+        'expires_at',
+        'notes',
+    ];
+
+    protected $dates = ['reserved_at','expires_at'];
+
+    public function room()
+    {
+        return $this->belongsTo(Room::class);
+    }
+
+    public function teacher()
+    {
+        return $this->belongsTo(\App\Models\Teacher::class, 'teacher_id');
+    }
+}
